# anta

./: .gitignore  pyrightconfig.json
server/: .env  .env.example  Untitled  main.py  pyproject.toml  pytest.ini  test.py
server/api/: __init__.py  dependencies.py  routes.py  schemas.py
server/api/stt/: routes.py
server/db/: __init__.py  connection.py  indexes.py  schemas.py  user_plan_sync.py
server/docs/: LATENCY_REDUCTION.md
server/modules/: config.py
server/modules/response/: __init__.py  config.py  intent_detector.py  intent_tools_mapping.py  llm_client.py  prompts.py  response.py  tool_registry.py
server/modules/response/data/: test-prompts.json
server/modules/response/tools/: __init__.py  base.py  battery_info.py  battery_issue_classifier.py  battery_issue_reporter.py  call_insights.py  geocoding.py  human_handoff.py  location.py  problem_context.py  service_center.py  subscription_info.py  user_info.py  (+1 more)
server/modules/tts/: __init__.py  controller.py  routes.py  service.py  tts.controller.py  tts.routes.py  tts.service.py  utils.py
server/routers/: agent.py  auth.py  batteries.py  call_transcripts.py  location.py  stt.py  text.py  tts.py  twilio.py  user.py
server/sample_data/: README.md
server/scripts/: seed_from_excel.py  test_password_hashing.py
server/scripts/seed-data/: agents.json  batteries.json  global_pricing.json  stations.json  subscriptions.json  swaps.json  users.json
server/scripts/seed-scripts/: seed-mock-data.py
server/services/: __init__.py  call_analytics.py  greeting_audio.py  user_lookup.py
server/services/geocoding/: __init__.py  geocoding_service.py
server/services/llm/: __init__.py  llm_service.py
server/services/stt/: __init__.py  assemblyai_service.py  soniox_service.py  vad_service.py
server/services/tts/: tts_service.py  utils.py
server/tests/: TESTING.md  __init__.py  conftest.py  test_api.py  test_api_routes.py  test_integration.py  test_pipeline.py  test_stt_client.py  test_stt_file.py  test_tools.py
(+184 files in other folders)
