[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.49.0",
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "silero-vad>=6.2.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
    "cartesia>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "google-genai>=1.55.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=4.1.0",
    "websockets>=15.0",
]
